app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nodejs-api
  labels:
    app: my-nodejs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nodejs-api
  template:
    metadata:
      labels:
        app: my-nodejs-api
    spec:
      containers:
        - name: my-nodejs-api
          image: my-nodejs-api:latest
          ports:
            - containerPort: 3000
        - name: my-nodejs-front
          image: my-nodejs-front:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
