ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nodejs-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-nodejs-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nodejs-api-service
                port:
                  name: http
